# ESP-IDF-ADC-LCD-LEDC

./: CMakeLists.txt
main/: CMakeLists.txt  adc_driver.c  adc_driver.h  app_context.c  app_context.h  config.h  drivers.h  editor.c  editor.h  hx711_driver.c  hx711_driver.h  i2c_lcd_driver.c  i2c_lcd_driver.h  lcd.h  led_driver.h  main.c  push_button_driver.c  push_button_driver.h
main/app/: app_logic.c  app_logic.h  editor.c  editor.h
main/common/: types.h  utils.c  utils.h
main/config/: config.h
main/core/: drivers.c  drivers.h
main/drivers/lcd/: i2c_lcd_driver.c  i2c_lcd_driver.h  lcd.c  lcd.h
main/drivers/led/: led_driver.c
